fixed popup not showing

--- a/project6/app/assets/stylesheets/style.css
+++ b/project6/app/assets/stylesheets/style.css
@@ -31,7 +31,8 @@ h3{
   margin: 0;
 }
 .divforalerts{
-margin:20pt 0 ;
+text-align:center;
+margin:40pt 0 ;
 color:#F2F1E9;
 border-radius:100pt;
 background-color:#333;
@@ -54,6 +55,7 @@ background-color:white;
 th{
 color:#F2F1E9;
 background-color:#F5765E;
+font-
 }
 
 td,th{
